--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -1,23 +1,69 @@
-#all-tweets header img {
- height: 80px;
- width: 80px;
- float: left;
+.all-tweets {
+  margin: 20px 0;
+  border: #ccc solid 1px;
+  border-radius: 10px;
+}
+.all-tweets:hover {
+  border: #000 solid 1px;
 }
 
-#all-tweets header .img::after {
+.all-tweets header {
+  padding: 15px;
+  height: 60px;
+  background-color: #eee;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.all-tweets header img {
+  height: 30px;
+  width: 30px;
+  float: left;
+}
+
+.all-tweets h3 {
+  float: left;
+  margin: 0 0 0 10px;
+  width: 50px;
+  padding: 5px 0;
+}
+
+.all-tweets header p {
+  float: right;
+  padding: 5px 0 0 0;
+  margin: 0;
+}
+
+.all-tweets header p::after {
   content: "";
   display: table;
   clear: both;
 }
 
-.icons footer {
-  border: 1px solid black;
+.all-tweets p {
+  padding: 0 10px;
+  margin: 30px 0;
 }
 
-.icons img {
+footer {
+  border-top: 1px solid #eee;
+  width: 100%;
+  height: 40px;
+  padding: 6px 10px;
+}
+
+.all-tweets footer p {
+  float: left;
+  font-size: 80%;
+  margin: 5px 0 0 0;
+  padding: 0;
+}
+
+.icons {
   float: right;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
+  margin: 7px 2px 0;
 }
 
 .icons img::after {
