--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -4,22 +4,22 @@
   border-radius: 10px;
 }
 
-#all-tweets-one {
+#all-tweets {
   opacity: 0.5;
 }
 
-#all-tweets-one:hover {
+#all-tweets:hover {
   opacity: 1;
 }
 
-#all-tweets-one footer p {
+#all-tweets footer p {
   opacity: 1;
 }
-#all-tweets-one .icons {
+#all-tweets .icons {
   visibility: hidden;
 }
 
-#all-tweets-one:hover .icons {
+#all-tweets:hover .icons {
   visibility: visible;
 }
 
