Added renderTweets function

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,7 +26,7 @@ body {
  */
 
 main.container {
- padding: 100px 2em;
+ padding: 2em;
  background-color: white;
  margin: 80px auto 0;
  width: 450px;
