--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -37,6 +37,7 @@
 .all-tweets header img {
   height: 30px;
   width: 30px;
+  border-radius: 5px;
   float: left;
 }
 
@@ -62,6 +63,7 @@
 .all-tweets p {
   padding: 0 10px;
   margin: 30px 0;
+  word-wrap: break-word;
 }
 
 footer {
