--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -23,6 +23,7 @@
 }
 
 #nav-bar div {
+  transition: opacity 0.25s;
   opacity: 0.8;
   float: right;
   background-color: #fff;
@@ -40,7 +41,7 @@
 #nav-bar div:hover p {
   opacity: 1;
   color: #000;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 #nav-bar div img {
@@ -48,7 +49,7 @@
   float: left;
   height: 20px;
   width: 20px;
-  margin: 20px 15px;
+  margin: 18px 15px;
   color: #00a087;
 }
 
